--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
 <head>
   <title>Todo App</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 
 <body>
-  <div class="aaa">
+  <div class="head">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <a class="head__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
+      Want more details?</a>
   </div>
-  <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
-      <label for="new-task">Add Item</label>
+  <div class="todo">
+    <p id="todo__add-task">
+      <label for="todo__new-task">Add Item</label>
     <div class="task-row-wrapper">
-      <input id="new-task" class="task" type="text">
+      <input id="todo__new-task" class="task" type="text">
       <button>Add</button>
     </div>
     </p>
     <h3>Todo</h3>
-    <ul id="incompleteTasks">
+    <ul id="todo__incomplete-tasks">
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
@@ -29,7 +30,7 @@
         <button class="edit">Edit</button>
         <button class="delete"><img src="./remove.svg"></button>
       </li>
-      <li class="editMode">
+      <li class="edit-mode">
         <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input type="text" value="go shopping" class="task">
