--- a/index.html
+++ b/index.html
@@ -23,29 +23,29 @@
     </p>
     <h3 class="head-text">Todo</h3>
     <ul id="todo__incomplete-tasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
+      <li class="task-line">
+        <input type="checkbox" class="checkbox">
+        <label class="task task-name">Pay Bills</label>
+        <input type="text" class="task task-name-input">
         <button class="button edit">Edit</button>
-        <button class="button delete"><img src="./remove.svg"></button>
+        <button class="button delete"><img class="image" src="./remove.svg"></button>
       </li>
-      <li class="edit-mode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="go shopping" class="task">
+      <li class="task-line edit-mode">
+        <input type="checkbox" class="checkbox">
+        <label class="task task-name">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task task-name-input">
         <button class="button edit">Save</button>
-        <button class="button delete"><img src="./remove.svg"></button>
+        <button class="button delete"><img class="image" src="./remove.svg"></button>
       </li>
     </ul>
     <h3 class="head-text">Completed</h3>
     <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
+      <li class="task-line">
+        <input type="checkbox" class="checkbox" checked>
+        <label class="task task-name">See the Doctor</label>
+        <input type="text" class="task task-name-input">
         <button class="button edit">Edit</button>
-        <button class="button delete"><img src="./remove.svg"></button>
+        <button class="button delete"><img class="image" src="./remove.svg"></button>
       </li>
     </ul>
   </div>
