--- a/index.html
+++ b/index.html
@@ -8,47 +8,52 @@
 </head>
 
 <body class="body">
-  <div class="head">
+
+  <header class="head">
     <img class="head__img" src="./eisenhower-matrix.jpg">
     <a class="head__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?</a>
-  </div>
-  <div class="todo">
-    <p id="todo__add-task">
+  </header>
+  <main class="todo">
+    <section id="todo__add-task">
       <label class="head-text" for="todo__new-task">Add Item</label>
-    <div class="task-row-wrapper">
-      <input id="todo__new-task" class="task" type="text">
-      <button class="button">Add</button>
-    </div>
-    </p>
-    <h3 class="head-text">Todo</h3>
-    <ul id="todo__incomplete-tasks">
-      <li class="task-line">
-        <input type="checkbox" class="checkbox">
-        <label class="task task-name">Pay Bills</label>
-        <input type="text" class="task task-name-input">
-        <button class="button edit">Edit</button>
-        <button class="button delete"><img class="image" src="./remove.svg"></button>
-      </li>
-      <li class="task-line edit-mode">
-        <input type="checkbox" class="checkbox">
-        <label class="task task-name">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task task-name-input">
-        <button class="button edit">Save</button>
-        <button class="button delete"><img class="image" src="./remove.svg"></button>
-      </li>
-    </ul>
-    <h3 class="head-text">Completed</h3>
-    <ul id="completed-tasks">
-      <li class="task-line">
-        <input type="checkbox" class="checkbox" checked>
-        <label class="task task-name">See the Doctor</label>
-        <input type="text" class="task task-name-input">
-        <button class="button edit">Edit</button>
-        <button class="button delete"><img class="image" src="./remove.svg"></button>
-      </li>
-    </ul>
-  </div>
+      <div class="task-row-wrapper">
+        <input id="todo__new-task" class="task" type="text">
+        <button class="button">Add</button>
+      </div>
+    </section>
+    <section id="todo__current-tasks">
+      <h3 class="head-text">Todo</h3>
+      <ul id="todo__incomplete-tasks">
+        <li class="task-line">
+          <input type="checkbox" class="checkbox">
+          <label class="task task-name">Pay Bills</label>
+          <input type="text" class="task task-name-input">
+          <button class="button edit">Edit</button>
+          <button class="button delete"><img class="image" src="./remove.svg"></button>
+        </li>
+        <li class="task-line edit-mode">
+          <input type="checkbox" class="checkbox">
+          <label class="task task-name">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task task-name-input">
+          <button class="button edit">Save</button>
+          <button class="button delete"><img class="image" src="./remove.svg"></button>
+        </li>
+      </ul>
+    </section>
+    <section id="todo__completed-tasks">
+      <h3 class="head-text">Completed</h3>
+      <ul id="completed-tasks">
+        <li class="task-line">
+          <input type="checkbox" class="checkbox" checked>
+          <label class="task task-name">See the Doctor</label>
+          <input type="text" class="task task-name-input">
+          <button class="button edit">Edit</button>
+          <button class="button delete"><img class="image" src="./remove.svg"></button>
+        </li>
+      </ul>
+    </section>
+  </main>
   <script src="app.js"></script>
 </body>
 
