fix - add attribute 'alt' to img

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="body">
 
   <header class="head">
-    <img class="head__img" src="./eisenhower-matrix.jpg">
+    <img class="head__img" src="./eisenhower-matrix.jpg" alt="Head">
     <a class="head__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?</a>
   </header>
@@ -30,14 +30,14 @@
           <label class="task task-name">Pay Bills</label>
           <input type="text" class="task task-name-input">
           <button class="button edit">Edit</button>
-          <button class="button delete"><img class="image" src="./remove.svg"></button>
+          <button class="button delete"><img class="image" src="./remove.svg" alt="Remove"></button>
         </li>
         <li class="task-line edit-mode">
           <input type="checkbox" class="checkbox">
           <label class="task task-name">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task task-name-input">
           <button class="button edit">Save</button>
-          <button class="button delete"><img class="image" src="./remove.svg"></button>
+          <button class="button delete"><img class="image" src="./remove.svg" alt="Remove"></button>
         </li>
       </ul>
     </section>
@@ -49,7 +49,7 @@
           <label class="task task-name">See the Doctor</label>
           <input type="text" class="task task-name-input">
           <button class="button edit">Edit</button>
-          <button class="button delete"><img class="image" src="./remove.svg"></button>
+          <button class="button delete"><img class="image" src="./remove.svg" alt="Remove"></button>
         </li>
       </ul>
     </section>
